<resources>
    <string name="app_name">Snake</string>
    <string name="about_text">This is a simple open source game. Have fun leading the black snake to green food. Try to avoid obstacles on the way.</string>
    <string name="about">About</string>
    <string name="git">GitHub</string>
    <string name="link"><a href="https://github.com/SergeyDirin/TestingSnake">https://github.com/SergeyDirin/TestingSnake</a></string>
    <string name="license">License</string>
    <string name="license_text1">Copyright 2017 Sergey Dirin</string>

    <string name="license_text2">Licensed under the Apache License, Version 2.0 (the License); you may not use this app except in compliance with the License. You may obtain a copy of the License at</string>
    <string name="license_text3">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="license_text4">Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="clear">Clear</string>
    <string name="share_screenshot">Share Screenshot</string>
    <string name="no_app_available">No App Available</string>
    <string name="new_game">New Game</string>
    <string name="unknown">Unknown</string>
    <string name="top_scores">Top Scores</string>
    <string name="game_over">Game Over</string>
    <string name="paused">Paused</string>

</resources>
